style.css
body {
    margin: 0;
}

p {
    font-family: 'Lobster', cursive;
    font-family: 'Lobster Two', cursive;
    font-family: 'Poppins', sans-serif;
}

.banner-image {
    background-image: url(/images/donation13.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.banner-text {
    color: white;
    margin: 0 auto;
    display: block;
    text-align: center;
    padding: 130px;
}

.banner-text p {
    font-size: 20px;
}

.banner-text h1 {
    font-family: 'Montserrat', sans-serif;

    font-family: 'Poppins', sans-serif;
    font-size: 60px;
}

.donate-btn {
    text-decoration: none;
    background-color: #ff5959;
    padding: 15px 40px;
    color: white;
    border-radius: 5px;
}

.donate-btn:hover {
    cursor: pointer;
}

.donate-text {
    margin: 0 auto;
    display: block;
    text-align: center;
    padding: 60px;
}

.donate-text h2 {
    font-family: 'Montserrat', sans-serif;

    font-family: 'Poppins', sans-serif;
    font-size: 40px;
}

.donate-text p {
    font-size: 20px;
    margin-bottom: -2%;
}

.container {
    display: flex;
    margin-left: 30%;
    /* margin-bottom: -10%; */
}

.grid-item {
    background-color: #fafafa;
    border: 1px solid #fafafa;
    padding: 20px;
    margin: 10px;
    font-size: 30px;
    text-align: center;
}

.container .selected {
    background-color: #ffeeee;
    border: 2px solid #ff5959;
}

/* 
try code here about donate today */
input {
    outline: none;
    border: none;
    text-align: center;
}

.form-input p {
    border-bottom: 1px solid gray;
    width: 40%;
    display: inline-block;
}

.form-input {
    text-align: center;
}


/* Donate plan */

.donation-plan {
    display: flex;
    margin-left: 18%;
    margin-right: 18%;

}

#food {
    background-color: rgba(79, 157, 166, 0.1);
    padding: 35px;
}

#shelter {
    background-color: rgba(255, 89, 89, 0.1);
    padding: 35px;
}

#education {
    background-color: rgba(255, 244, 214, 1);
    padding: 35px;
}

.donation-ways {

    margin: 2%;
    padding-left: 20px;

}

.container-events {
    display: flex;
    margin-left: 25%;
    margin-right: 25%;

}

.read-more {
    color: #e4d01a;
}

.read-more:hover {
    text-decoration: none;
    color: red;
}



.subscription-option {
    background-color: #FFF4D6;
    padding: 70px;
    text-align: center;
    margin-left: 30%;
    margin-right: 30%;
    margin-bottom: 5%;
}

.subscription-option .email-input {
    height: 44px;
    width: 50%;
    margin: -5px;
}

footer {
    color: white;
    text-align: center;
    background-color: black;
    padding: 30px;
    margin: 0 auto;
}

footer h1 {
    color: #FF5959;
    font-family: 'Lobster', cursive;
    font-family: 'Lobster Two', cursive;
}

